<resources>
    <string name="app_name">Smartsplit</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_expense">Add Expense</string>
    <string name="with_you_and">With you and:</string>
    <string name="enter_a_contact">Enter a contact</string>
    <string name="enter_a_description">Enter a Description</string>
    <string name="_0_00">0.00</string>
    <string name="save">SAVE</string>
    <string name="logout">Logout</string>
    <string name="take_me_home">Take me Home</string>
    <string name="welcome_you_are_logged_in">Welcome! You are logged in</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_registered_sign_up_here">Not registered? Sign Up here</string>
    <string name="log_in">Log In</string>
    <string name="split">Split:</string>
    <string name="equally">Equally</string>
    <string name="friend1">friend1</string>
    <string name="unequally">Unequally</string>
    <string name="tab_3_activity">Tab 3 Activity</string>
    <string name="tab_2_group">Tab 2 Group</string>
    <string name="enter_your_share">Enter your share:</string>
    <string name="enter_contacts_share">Enter contacts share:</string>
    <string name="dollar_sign">$</string>
    <string name="friend4">friend4</string>
    <string name="friend3">friend3</string>
    <string name="friend2">friend2</string>
    <string name="enter_share_of">Enter share of:</string>
    <string name="splitnosemi">Split</string>
    <string name="splitbold">Split</string>
    <string name="Rs">\u20B9</string>
    <string-array name="programming_languages">
        <item>C</item>
        <item>C++</item>
        <item>Java</item>
        <item>Javascript</item>
        <item>Kotlin</item>
        <item>Python</item>
        <item>Visual Studio</item>
        <item>Ruby</item>
    </string-array>
    <string-array name="description">

        <item>This is a random description.</item>
        <item>This is a random description.</item>
        <item>This is a random description.</item>
        <item>This is a random description.</item>
        <item>This is a random description.</item>
        <item>This is a random description.</item>
        <item>This is a random description.</item>
        <item>This is a random description.</item>
    </string-array>
</resources>
