<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/linear"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".AddExpense">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbaradd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_on_primary_emphasis_high_type"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
        app:title="Add Expense">
        <!--        <Button-->
        <!--            android:id="@+id/saveButton"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:background="@color/colorPrimary"-->
        <!--            android:clickable="true"-->
        <!--            android:text="@string/save"-->
        <!--            android:layout_alignParentEnd="true"-->
        <!--            android:focusable="true" />-->
    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbaradd"
        android:padding="10dp"
        android:text="@string/with_you_and"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/contactAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:completionHint="@string/enter_a_contact"
        android:completionThreshold="0"
        android:ems="10"
        android:hint="@string/enter_a_contact"
        android:padding="10dp" />

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactAdd"
        android:contentDescription="@string/todo"
        android:foreground="?android:selectableItemBackground"
        android:padding="10dp"
        android:src="@drawable/baseline_add_circle_outline_white_18dp" />
    <!-- Hidden Contact Details-->

<RelativeLayout
    android:id="@+id/relative_layout2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/imageButton">
    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chip_group"/>
</RelativeLayout>
    <!-- Hidden Contact Details-->
    <RelativeLayout
        android:id="@+id/relative_layout4"
        android:layout_below="@+id/relative_layout2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <ImageView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/desc"
            android:ems="10"
            android:hint="@string/enter_a_description"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relative_layout5"
        android:layout_below="@+id/relative_layout4">

        <ImageView
            android:id="@+id/rupee"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            app:srcCompat="@drawable/rupee_white" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/rupee"
            android:drawableTint="@color/common_google_signin_btn_text_dark_default"
            android:ems="10"
            android:hint="@string/_0_00"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="10dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_layout5"
        android:padding="10dp"
        android:paddingTop="10dp"
        android:text="@string/split"
        android:textSize="20sp" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/textView3"
        android:layout_below="@id/relative_layout5"
        android:padding="0dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/equally"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="makeInVisible"
            android:paddingEnd="10dp"
            android:padding="10dp"
            android:text="@string/equally"/>
        <RadioButton
            android:id="@+id/unequally"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="makeVisible"
            android:padding="10dp"
            android:text="@string/unequally" />

    </RadioGroup>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/split2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_margin="14dp"
        android:layout_marginTop="14dp"
        android:onClick="send"
        android:outlineProvider="background"
        android:text="@string/splitbold"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:strokeColor="@color/cardview_light_background" />
</RelativeLayout></ScrollView>